--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "LinguaFox",
-  "version": "1.0",
+  "version": "1.1",
   "description": "Translate between Chinese and other languages using OpenAI's GPT-4o",
   "permissions": ["storage", "activeTab"],
   "browser_action": {
@@ -18,10 +18,13 @@
     "128": "icons/icon128.png"
   },
   "options_page": "options.html",
-  "applications": {
+  "browser_specific_settings": {
     "gecko": {
       "id": "linguafox@example.com",
-      "strict_min_version": "58.0"
+      "strict_min_version": "58.0",
+      "data_collection_permissions": {
+        "required": ["none"]
+      }
     }
   }
 }
